# wgpu_experiments

./: Cargo.toml
examples/: clear_window_with_color.rs  create_window.rs
shaders/: fundamentals.wgsl  fundamentals_compute.wgsl  inter_stage_variables.wgsl  rotating_msaa_triangles.wgsl  storage.wgsl  uniforms.wgsl  vertex.wgsl
